[ME-25] Add POST endpoint to test-api (#40)
* [ME-25] Update DB

* [ME-25] Update model

* [ME-25] Update TestPresenter

* [ME-25] Update seeds

* [ME-25] Update :test factory

* [ME-25] Update request spec

* [ME-25] Update Swagger JSON file

* [ME-25] Add dry-validation gem

* [ME-25] Update Test#choices validation logic

* [ME-25] Update routes

* [Me-25] Update routes

* [ME-25] Update request spec

* [ME-25] Update Swagger JSON file

* [ME-25] Update README

* [ME-25] Stop using else, or else
