# tests-api/app/contracts/choices_schema.rb
@@ -1,0 +1,10 @@
+# frozen_string_literal: true
+
+ChoiceSchema = Dry::Schema.Params do
+  required(:answer).filled(:str?)
+  required(:correct).filled(:bool?)
+end
+
+ChoicesSchema = Dry::Schema.Params do
+  required(:choices).filled(:array).each(ChoiceSchema)
+end
