# tests-api/app/controllers/tests_controller.rb
@@ -12,4 +12,25 @@ class TestsController < ApplicationController
     test = Test.find(params[:id])
     render_resource(test)
   end
+
+  # POST /tests/
+  def create
+    test = Test.new(test_params)
+
+    return render_validation_errors(test) unless test.save
+
+    render_resource(test, :created)
+  end
+
+  private
+
+  def test_params
+    params.permit(
+      :uuid,
+      :question_type,
+      :subject,
+      :question,
+      choices: %i(answer correct),
+    )
+  end
 end
