# tests-api/app/models/test.rb
@@ -1,5 +1,12 @@
 # frozen_string_literal: true
 
 class Test < ApplicationRecord
-  validates :subject, :question, :answer, presence: true
+  QUESTION_TYPES = %w(binary multiple-answer multiple-choice).freeze
+
+  serialize :choices, Array
+
+  validates :subject, :question, presence: true
+  validates :question_type, inclusion: { in: QUESTION_TYPES }
+
+  validates_with ChoicesValidator, unless: -> (record) { record.errors[:question_type].any? }
 end
