# tests-api/swagger/v1/swagger.yaml
@@ -15,13 +15,13 @@ paths:
       - name: limit
         in: query
         type: integer
-        description: Number of results to return per page.
         required: false
+        description: Number of results to return per page.
       - name: offset
         in: query
         type: integer
-        description: The initial index from which to return the results.
         required: false
+        description: The initial index from which to return the results.
       responses:
         '200':
           description: success
@@ -31,10 +31,10 @@ paths:
               count:
                 type: integer
               next:
-                type: integer
+                type: string
                 nullable: true
               previous:
-                type: integer
+                type: string
                 nullable: true
               results:
                 type: array
@@ -43,12 +43,27 @@ paths:
                   properties:
                     uuid:
                       type: string
+                    question_type:
+                      type: string
                     subject:
                       type: string
                     question:
                       type: string
-                    answer:
-                      type: string
+                    choices:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          answer:
+                            type: string
+                          correct:
+                            type: boolean
+                  required:
+                  - uuid
+                  - subject
+                  - question_type
+                  - question
+                  - choices
             required:
             - count
             - next
@@ -60,10 +75,121 @@ paths:
               next: 
               previous: 
               results:
-              - uuid: b77eb326-efc1-41e1-a37e-c66bcff4f340
-                subject: Science
-                question: Is math related to science?
-                answer: Non't
+              - uuid: cf48df3b-ae86-464e-acd7-6cdca498fa8a
+                subject: veniam
+                question_type: binary
+                question: Et dignissimos voluptate ab?
+                choices:
+                - answer: numquam
+                  correct: true
+                - answer: porro
+                  correct: false
+    post:
+      summary: Creates a test
+      tags:
+      - Tests
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: test
+        in: body
+        schema:
+          type: object
+          properties:
+            uuid:
+              type: string
+            question_type:
+              type: string
+            subject:
+              type: string
+            question:
+              type: string
+            choices:
+              type: array
+              items:
+                type: object
+                properties:
+                  answer:
+                    type: string
+                  correct:
+                    type: boolean
+          required:
+          - uuid
+          - subject
+          - question_type
+          - question
+          - choices
+      responses:
+        '201':
+          description: created
+          schema:
+            type: object
+            properties:
+              uuid:
+                type: string
+              question_type:
+                type: string
+              subject:
+                type: string
+              question:
+                type: string
+              choices:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    answer:
+                      type: string
+                    correct:
+                      type: boolean
+            required:
+            - uuid
+            - subject
+            - question_type
+            - question
+            - choices
+          examples:
+            application/json:
+              uuid: 34fde577-2360-4dd9-8aa3-a0d32b799336
+              subject: accusantium
+              question_type: binary
+              question: Voluptate repellat ut deserunt?
+              choices:
+              - answer: totam
+                correct: true
+              - answer: est
+                correct: false
+        '400':
+          description: bad_request
+          schema:
+            type: object
+            properties:
+              subject:
+                type: array
+                items:
+                  type: string
+              lesson_id:
+                type: array
+                items:
+                  type: string
+              question_type:
+                type: array
+                items:
+                  type: string
+              question:
+                type: array
+                items:
+                  type: string
+              choices:
+                type: array
+                items:
+                  type: string
+          examples:
+            application/json:
+              choices:
+              - size must be 2
   "/api/tests/{uuid}":
     get:
       summary: Retrieves a test
@@ -84,23 +210,38 @@ paths:
             properties:
               uuid:
                 type: string
+              question_type:
+                type: string
               subject:
                 type: string
               question:
                 type: string
-              answer:
-                type: string
+              choices:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    answer:
+                      type: string
+                    correct:
+                      type: boolean
             required:
             - uuid
             - subject
+            - question_type
             - question
-            - answer
+            - choices
           examples:
             application/json:
-              uuid: b77eb326-efc1-41e1-a37e-c66bcff4f340
-              subject: Science
-              question: Is math related to science?
-              answer: Non't
+              uuid: 34fde577-2360-4dd9-8aa3-a0d32b799336
+              subject: accusantium
+              question_type: binary
+              question: Voluptate repellat ut deserunt?
+              choices:
+              - answer: totam
+                correct: true
+              - answer: est
+                correct: false
         '404':
           description: not_found
           schema:
@@ -108,6 +249,8 @@ paths:
             properties:
               detail:
                 type: string
+            required:
+            - detail
           examples:
             application/json:
               detail: Not found.
